Fix z-index

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
   color: white;
-  z-index: 100;
+  z-index: 300;
   padding: 0 1.6rem 0.8rem 1.6rem;
   background-color: rgba(51, 51, 51, 0.8);
   min-height: var(--header-height);
